navbar toggle is working properly

--- a/about.html
+++ b/about.html
@@ -82,11 +82,16 @@
             </div>
             <div class="col-6 joseph-p">
                 <h1 style="font-size: 3rem; letter-spacing: .5rem;">ABOUT US</h1>
-                <h5 style="font-weight: bolder;" class="mt-5">-NAME-</h5>
+                <h5 style="font-weight: bolder;">-NAME-</h5>
                 <p style="font-weight: bolder;">NEERAJ YADAV</p>
-                <p style="color: red;">BODY MASSAGE THERAPIST & NATUROPATHY TREATMENT EXPERIENCED</p>
-                <p style="color: red;">HOME SERVICE AVAILABLE IN ONLY IN BHOPAL AREAS BUSINESS HOURE- 9am TO 9pm EVERYDAY PRICE STARTED FROM
-                    399 TO 999 /- <br>DURATION- 45 Minutes to 1Hour</p>
+                <p style="color: red;font-weight: bolder;">BODY MASSAGE THERAPIST & NATUROPATHY TREATMENT EXPERIENCED</p>
+                <p style="color: red;font-weight: bolder;">HOME SERVICE AVAILABLE ONLY IN BHOPAL AREAS <br>
+                    BUSINESS HOURS- 9am TO 9pm EVERYDAY <br>
+                <h3>DURATION-</h3><span style="font-weight: bold;"> 45 Min to 90 Min</span></p>
+                <div class="bg-danger w-100 text-white py-3 rounded">
+                    <h3> PRICES-
+                    </h3><span style="font-weight: bold;"> STARTED FROM 399 TO 999 /-</span> <br>
+                      </div>
 
 
                 <h5 style="font-weight: bolder;" class="mt-5">QUALIFICATION</h5>
@@ -102,13 +107,7 @@
                     Naturopaths claim the ancient Greek “Father of Medicine”, Hippocrates, as the first advocate of
                     naturopathic medicine,
                     before the term existed.<br><br><br>
-                    Naturopathy has its roots in the 19th-century Natural Cure movement of Europe.
-                    In Scotland, Thomas Allinson started advocating his “Hygienic Medicine” in the 1880s, promoting a
-                    natural diet and
-                    exercise with avoidance of tobacco and overwork.<br><br><br>
-                    The term naturopathy was coined in 1895 by John Scheel,and purchased by Benedict Lust, whom
-                    naturopaths consider to be
-                    the “Father of U.S. Naturopathy”.</p>
+                   </p>
                 
                     
             </div>
@@ -245,15 +244,7 @@
 
 
     <!-- bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
