--- a/index.html
+++ b/index.html
@@ -101,9 +101,6 @@
             <div class="carousel-item">
                 <img src="img/carousel/Neela_Carousel-3.jpeg" class="d-block w-100 h-50" alt="...">
             </div>
-            <div class="carousel-item">
-                <img src="img/carousel/Neela_Carousel-4.jpeg" class="d-block w-100 h-50" alt="...">
-            </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
             data-bs-slide="prev">
@@ -128,8 +125,10 @@
 
     <!-- WHY CHOOSE JOSEPH KING PHOTOGRAPHY? -->
     <div class="text-center why-choose container-fluid mt-5">
+        <hr>
         <h1>WHY CHOOSE NEELAM NATUROPATHY<br><span style="color: #DE3163; font-weight:bolder">MASSAGE CENTRE</span> </h1>
-        <p style="color:red">Service Are Also Provide At home</p>
+        <hr>
+        <p style="color:red; font-weight: bold;">Service Are Also Provide At home</p>
     </div>
 
     <!-- home page services -->
@@ -140,7 +139,7 @@
         </div>
         <div class="my-service-img">
             <img src="img/services/3.jpg" alt="..." class="img-thumbnail">
-            <h2>SWEDISH MASSAGE</h2>
+            <h2>MUSTARD MASSAGE</h2>
         </div>
         <div class="my-service-img">
             <img src="img/services/4.jpg" alt="..." class="img-thumbnail">
@@ -173,15 +172,15 @@
     <div class="container-fluid services p-5">
         <div class="my-service-img">
             <img src="img/services/10.jpg" alt="..." class="img-thumbnail">
-            <h2>HEAD MASSAGE</h2>
+            <h2>LEG MASSAGE</h2>
         </div>
         <div class="my-service-img">
             <img src="img/services/11.jpg" alt="..." class="img-thumbnail">
-            <h2>NECK MASSAGE</h2>
+            <h2>HEAD MASSAGE</h2>
         </div>
         <div class="my-service-img">
             <img src="img/services/6.jpg" alt="..." class="img-thumbnail">
-            <h2>ARONA ASIAN MASSAGE</h2>
+            <h2>AROMA ASIAN MASSAGE</h2>
         </div>
 
     </div>
@@ -189,8 +188,10 @@
 
     <!-- WHY CHOOSE JOSEPH KING PHOTOGRAPHY? -->
     <div class="text-center why-choose container-fluid mt-5">
+        <hr>
         <h1>WHY CHOOSE NEELAM NATUROPATHY<br><span style="color: #DE3163; font-weight:bolder">TREATMENT CENTRE</span> </h1>
-        <p style="color:red">Service Are Also Provide At home</p>
+        <hr>
+        <p style="color:red; font-weight: bold;">Service Are Also Provide At home</p>
     </div>
 
     <!-- home page services -->
@@ -205,7 +206,7 @@
         </div>
         <div class="my-service-img">
             <img src="img/services/slipdisc.jpeg" alt="..." class="img-thumbnail">
-            <h2>SLIPDISC <br>TREATMENT</h2>
+            <h2>FULL BODY <br/>RELIEF</h2>
         </div>
         <div class="my-service-img">
             <img src="img/services/migrain.jpeg" alt="..." class="img-thumbnail">
@@ -243,10 +244,16 @@
                     the “Father of U.S. Naturopathy”.</p>
                 <h5 style="font-weight: bolder;">-NAME-</h5>
                 <p style="font-weight: bolder;">NEERAJ YADAV</p>
-                <p style="color: red;">BODY MASSAGE THERAPIST & NATUROPATHY TREATMENT EXPERIENCED</p>
-                <p style="color: red;">HOME SERVICE AVAILABLE IN ONLY IN BHOPAL  BUSINESS AREAS HOURS- 9am TO 9pm
-                    EVERYDAY PRICES STARTED FROM 399 TO 999 /- <br>
-                    DURATION- 45 Minutes to 1Hour</p>
+                <p style="color: red;font-weight: bolder;">BODY MASSAGE THERAPIST & NATUROPATHY TREATMENT EXPERIENCED</p>
+                <p style="color: red;font-weight: bolder;">HOME SERVICE AVAILABLE ONLY IN BHOPAL   AREAS <br> 
+                    BUSINESS HOURS- 9am TO 9pm EVERYDAY <br>
+                <h3>DURATION-
+                </h3><span style="font-weight: bolder;"> 45 Min to 90 Min</span></p>
+                   <div class="bg-danger w-100 text-white py-3 rounded">
+                        <h3> PRICES-
+                        </h3><span> STARTED FROM 399 TO 999 /-</span> <br>
+                       
+                   </div>
             </div>
             <div class="col-6">
                 <img src="img/detail-img.jpeg" class="img-fluid" alt="Responsive image">
@@ -260,7 +267,7 @@
 
     <!-- CLIENTS/ ASSOCIATES -->
     <div class="container-fluid text-center p-5 ">
-        <h1>CLIENTS/ ASSOCIATES</h1>
+       <hr> <h1>CLIENTS/ ASSOCIATES</h1><hr>
     </div>
     <div id="owl-demo" class="owl-carousel owl-theme container">
         <div class="item d-flex justify-content-center flex-column align-items-center">
@@ -467,12 +474,7 @@
 
 
     <!-- bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
