--- a/gallery.html
+++ b/gallery.html
@@ -82,7 +82,7 @@
     </div>
     <div class="my-service-img">
         <img src="img/services/3.jpg" alt="..." class="img-thumbnail">
-        <h2>SWEDISH MASSAGE</h2>
+        <h2>MUSTARD OIL MASSAGE</h2>
         <h5>The Visual Guide to Swedish Massage clearly  illustrates<br> the practical  methods for performing foundational massage
         therapy techniques.</h5>
     </div>
@@ -125,7 +125,7 @@
 
 <!-- home page services -->
 
-    <h1 class="text-center mt-5">INTERACTION WITH CLIENT</h1>
+<hr> <h1 class="text-center my-5">INTERACTION WITH CLIENT</h1><hr>
 <div class="container  services d-flex justify-content-around p-5">
    
     <div class="">
@@ -307,15 +307,6 @@
 
 
     <!-- bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
