all changes are completely done

--- a/about.html
+++ b/about.html
@@ -87,11 +87,11 @@
                 <p style="color: red;font-weight: bolder;">BODY MASSAGE THERAPIST & NATUROPATHY TREATMENT EXPERIENCED</p>
                 <p style="color: red;font-weight: bolder;">HOME SERVICE AVAILABLE ONLY IN BHOPAL AREAS <br>
                     BUSINESS HOURS- 9am TO 9pm EVERYDAY <br>
-                <h3>DURATION-</h3><span style="font-weight: bold;"> 45 Min to 90 Min</span></p>
+                <h3 style="font-weight: bolder;">-DURATION-
+                </h3><span style="font-weight: bolder; font-size: large;"> 45 Min to 90 Min</span></p>
                 <div class="bg-danger w-100 text-white py-3 rounded">
-                    <h3> PRICES-
-                    </h3><span style="font-weight: bold;"> STARTED FROM 399 TO 999 /-</span> <br>
-                      </div>
+                    <h3 style="font-weight: bolder;"> -PRICES-
+                    </h3><span style="font-size: large;font-weight: bolder;"> STARTED FROM 399 TO 999 /-</span> <br>   </div>
 
 
                 <h5 style="font-weight: bolder;" class="mt-5">QUALIFICATION</h5>
