--- a/index.html
+++ b/index.html
@@ -93,13 +93,19 @@
     <div id="carouselExampleControls" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/carousel/Neelam_Carousel-1.jpeg" class="d-block w-100 h-50" alt="...">
+                <img src="img/carousel/Neelam_Carousel-1.jpeg" class="d-block" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/carousel/Neelam_Carousel-2.jpeg" class="d-block w-100 h-50" alt="...">
+                <img src="img/carousel/Neelam_Carousel-2.jpeg" class="d-block" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/carousel/Neela_Carousel-3.jpeg" class="d-block w-100 h-50" alt="...">
+                <img src="img/carousel/Neela_Carousel-3.jpeg" class="d-block" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="img/carousel/Neela_Carousel-4.jpg" class="d-block" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="img/carousel/Neela_Carousel-5.jpg" class="d-block" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -139,7 +145,7 @@
         </div>
         <div class="my-service-img">
             <img src="img/services/3.jpg" alt="..." class="img-thumbnail">
-            <h2>MUSTARD MASSAGE</h2>
+            <h2>MUSTARD OIL MASSAGE</h2>
         </div>
         <div class="my-service-img">
             <img src="img/services/4.jpg" alt="..." class="img-thumbnail">
@@ -181,6 +187,10 @@
         <div class="my-service-img">
             <img src="img/services/6.jpg" alt="..." class="img-thumbnail">
             <h2>AROMA ASIAN MASSAGE</h2>
+        </div>
+        <div class="my-service-img">
+            <img src="img/services/neck.jpeg" alt="..." class="img-thumbnail">
+            <h2>NECK MASSAGE</h2>
         </div>
 
     </div>
@@ -247,11 +257,11 @@
                 <p style="color: red;font-weight: bolder;">BODY MASSAGE THERAPIST & NATUROPATHY TREATMENT EXPERIENCED</p>
                 <p style="color: red;font-weight: bolder;">HOME SERVICE AVAILABLE ONLY IN BHOPAL   AREAS <br> 
                     BUSINESS HOURS- 9am TO 9pm EVERYDAY <br>
-                <h3>DURATION-
-                </h3><span style="font-weight: bolder;"> 45 Min to 90 Min</span></p>
+                <h3 style="font-weight: bolder;">-DURATION-
+                </h3><span style="font-weight: bolder; font-size: large;"> 45 Min to 90 Min</span></p>
                    <div class="bg-danger w-100 text-white py-3 rounded">
-                        <h3> PRICES-
-                        </h3><span> STARTED FROM 399 TO 999 /-</span> <br>
+                        <h3 style="font-weight: bolder;"> -PRICES-
+                        </h3><span style="font-size: large; font-weight: bolder;"> STARTED FROM 399 TO 999 /-</span> <br>
                        
                    </div>
             </div>
