contact page done

--- a/contact.html
+++ b/contact.html
@@ -128,8 +128,8 @@
         <a href="https://wa.me/9981856814" target="_"><i class="fa-solid fa-phone"></i> 9981856814</a><br />
         <a href="#"><i class="fa-solid fa-phone"></i>6260489543</a><br />
         <a href="#"><i class="fa-solid fa-envelope"></i> ny3719910@gmail.com</a>
-        <p>NEELAM NATUROPATHY CENTER<br />
-            Home Service Availabe In Bhopal  Business Areas Hour - 9AM to 9PM Everyday</p>
+        <p class=" text-danger" style='font-weight: bolder;'>NEELAM NATUROPATHY CENTER<br />
+            Home Service Availabe In Bhopal   Areas <br> Business Hour - 9AM to 9PM Everyday</p>
     </div>
     <div class="container-fluid my-map p-5 w-100">
 
