full body relief image change

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <h2>SCIATICA <br>TREATMENT</h2>
         </div>
         <div class="my-service-img">
-            <img src="img/services/slipdisc.jpeg" alt="..." class="img-thumbnail">
+            <img src="img/services/slipdisc.jpeg" alt="..." class="img-thumbnail h-50">
             <h2>FULL BODY <br/>RELIEF</h2>
         </div>
         <div class="my-service-img">
