--- a/contact.html
+++ b/contact.html
@@ -103,13 +103,13 @@
 
             </p>
             <p class="insta">
-                <a href="https://www.instagram.com" target="_">
+                <a href="https://instagram.com/neelam_naturopathy_centre?igshid=MzRlODBiNWFlZA==" target="_">
                     <i class="fa-brands fa-instagram"></i> INSTAGRAM</a>
                 <br />
                 <img src="img/QR-CODE/QR-code.jpeg" />
             </p>
             <p class="fb">
-                <a href="https://www.facebook.com/people/Neeraj-Yadav/100024237185007/" target="_">
+                <a href="https://www.facebook.com/profile.php?id=100086491733158&mibextid=ZbWKwL" target="_">
                     <i class="fa-brands fa-facebook-square"></i> FACEBOOK</a>
                 <br />
                 <img src="img/QR-CODE/QR-code.jpeg" />
@@ -129,12 +129,26 @@
         <a href="#"><i class="fa-solid fa-phone"></i>6260489543</a><br />
         <a href="#"><i class="fa-solid fa-envelope"></i> ny3719910@gmail.com</a>
         <p class=" text-danger" style='font-weight: bolder;'>NEELAM NATUROPATHY CENTER<br />
-            Home Service Availabe In Bhopal   Areas <br> Business Hour - 9AM to 9PM Everyday</p>
+          <h1 class="text-danger ">  Home Service Availabe In Bhopal   Areas</h1> <ul class="fw-bold lead list-unstyled text-danger">
+                <li>- Hoshangabad Road                 </li>
+                <li>- Arera colony                 </li>
+                <li>- Kolar road</li>
+                <li>- Shakti nagar                 </li>
+                <li>- Jawarhar chowk                 </li>
+                <li>- Kohefiza</li>
+                <li>- Lalghati</li>
+                <li>- Airport road                 </li>
+                <li>- Karond</li>
+                <li>- Ayodya nagar                 </li>
+            </ul> 
+            <br> Business Hour - 9AM to 9PM Everyday</p>
     </div>
-    <div class="container-fluid my-map p-5 w-100">
+    <div class="map">
 
-        <img src="./img//imag-1.jpeg" style="height: 50rem; border-radius: 2rem;">
-    </div>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58667.53596734651!2d77.3921221181341!3d23.216836308898447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397c428f8fd68fbd%3A0x2155716d572d4f8!2sBhopal%2C%20Madhya%20Pradesh!5e0!3m2!1sen!2sin!4v1684835455254!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="60%"  ></iframe>
+</div>
+   
 
 
 
@@ -168,15 +182,17 @@
                             <section class="me-3 my-2 text-center">
                                 <!-- Facebook -->
                                 <a class="btn btn-outline-light btn-floating m-1"
-                                    href="https://www.facebook.com/people/Neeraj-Yadav/100024237185007/"
+                                    href="https://www.facebook.com/profile.php?id=100086491733158&mibextid=ZbWKwL"
+                                    target="_blank"
                                     role="button"><i class="fab fa-facebook-f"></i></a>
 
                                 <!-- Twitter -->
                                 <a class="btn btn-outline-light btn-floating m-1" href="https://wa.me/9981856814"
+                                target="_"
                                     role="button"><i class="fab fa-whatsapp"></i></a>
 
                                 <!-- Google -->
-                                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                                <a class="btn btn-outline-light btn-floating m-1" href="https://instagram.com/neelam_naturopathy_centre?igshid=MzRlODBiNWFlZA==" target="_" role="button"><i
                                         class="fab fa-instagram"></i></a>
 
                                 <!-- Github -->
