--- a/gallery.html
+++ b/gallery.html
@@ -157,6 +157,22 @@
         <div class="">
         <img src="img/CLIENT/7.jpeg" alt="..." class="img-thumbnail img-fluid shadow" style="height: 40rem; width:35rem; border-radius: 1rem;">
     </div>
+    
+
+</div>
+<div class="container services d-flex justify-content-around ">
+  
+  
+    <div class="">
+        <img src="img/CLIENT/8.jpeg" alt="..." class="img-thumbnail img-fluid shadow" style="height: 40rem; width:35rem; border-radius: 1rem;">
+    </div>
+    <div class="">
+        <img src="img/CLIENT/9.jpeg" alt="..." class="img-thumbnail img-fluid shadow" style="height: 40rem; width:35rem; border-radius: 1rem;">
+        </div> 
+        <div class="">
+        <img src="img/CLIENT/10.jpeg" alt="..." class="img-thumbnail img-fluid shadow" style="height: 40rem; width:35rem; border-radius: 1rem;">
+    </div>
+    
 
 </div>
 
