--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
     <!-- carousel -->
     <div id="carouselExampleControls" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
+            <div class="carousel-item">
+                <img src="img/carousel/NeerajYadav.png" class="d-block" alt="...">
+            </div>
             <div class="carousel-item active">
                 <img src="img/carousel/Neelam_Carousel-1.jpeg" class="d-block" alt="...">
             </div>
@@ -100,9 +103,6 @@
             </div>
             <div class="carousel-item">
                 <img src="img/carousel/Neela_Carousel-3.jpeg" class="d-block" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="img/carousel/Neela_Carousel-4.jpg" class="d-block" alt="...">
             </div>
             <div class="carousel-item">
                 <img src="img/carousel/Neela_Carousel-5.jpg" class="d-block" alt="...">
@@ -134,7 +134,7 @@
         <hr>
         <h1>WHY CHOOSE NEELAM NATUROPATHY<br><span style="color: #DE3163; font-weight:bolder">MASSAGE CENTRE</span> </h1>
         <hr>
-        <p style="color:red; font-weight: bold;">Service Are Also Provide At home</p>
+        <p style="color:red; font-weight: bold;">Services Are Also Provide At home</p>
     </div>
 
     <!-- home page services -->
