--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 
     <div class="container p-3">
         <div class="row joseph">
-            <div class="col-6 ">
+            <div class="col-6 image-class ">
                 <img src="img/naresh.jpg" class="img-thumbnail" alt="..." style="border-radius: 0.5rem;">
             </div>
             <div class="col-6 joseph-p">
@@ -108,7 +108,10 @@
                     naturopathic medicine,
                     before the term existed.<br><br><br>
                    </p>
-                
+                 <div class="container-fluid my-map p-5 w-100">
+
+        <img src="./img//imag-1.jpeg"  style="border-radius: 2rem;">
+    </div>
                     
             </div>
         </div>
